change sunpride to special campaign

--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,69347],[],[[5,0,1,0,[],[0,5458,55817,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,82825],[],[[4,0,1,0,[],[1,203,82617],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Smoke Test Sunpride","*C:\\Development\\Robot Framework\\Sunpride\\Test\\Smoke Test Sunpride.robot","*../Test/Smoke%20Test%20Sunpride.robot","*<p>Test suit ini dibuat untuk smoke test sunpride\x3c/p>","*Login","*Element with locator '//div[text()=\"Lanjutkan\"]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*C:\\Development\\Robot Framework\\Special Campaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Inaco"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:56","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:56","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:01:09","fail":1,"id":"s1","label":"Smoke Test Sunpride","name":"Smoke Test Sunpride","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:23","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:23","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:01:23","fail":0,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1600048802331;
+window.output["baseMillis"] = 1600237010104;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 69387;
+window.output["generated"] = 82873;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
