--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,82825],[],[[4,0,1,0,[],[1,203,82617],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,87307],[],[[4,0,1,0,[],[1,199,87102],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*C:\\Development\\Robot Framework\\Special Campaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Inaco"]);
+window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*D:\\Github Robot Framework\\RF_SpecialCampaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Inaco"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:23","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:23","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:01:23","fail":0,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:27","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:27","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:01:27","fail":0,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1600237010104;
+window.output["baseMillis"] = 1600350551054;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 82873;
+window.output["generated"] = 87360;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
