--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,118489],[],[[4,0,1,0,[],[0,214,118273,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,62255],[],[[4,0,1,0,[5],[1,226,62023],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*D:\\Github Robot Framework\\RF_SpecialCampaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Inaco","*Element with locator '//div[@name='home content']/div[1]//p[@class='fonts__FontWrapper-cy6f2q-0 dThTVE']' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*D:\\Github Robot Framework\\RF_SpecialCampaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Weekly","*Weekly"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:58","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:01:58","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:01:58","fail":1,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:02","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:02","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:02","fail":0,"label":"Weekly","pass":1}],[{"elapsed":"00:01:02","fail":0,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1600613535140;
+window.output["baseMillis"] = 1600659520294;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 118513;
+window.output["generated"] = 62301;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
