--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,62255],[],[[4,0,1,0,[5],[1,226,62023],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,129263],[],[[4,0,1,0,[5],[0,235,129021,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*D:\\Github Robot Framework\\RF_SpecialCampaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Weekly","*Weekly"]);
+window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*D:\\Github Robot Framework\\RF_SpecialCampaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Inaco","*Inaco","*ValueError: dictionary update sequence element #0 has length 1; 2 is required"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:02","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:02","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:01:02","fail":0,"label":"Weekly","pass":1}],[{"elapsed":"00:01:02","fail":0,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:02:09","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:02:09","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:02:09","fail":1,"label":"Inaco","pass":0}],[{"elapsed":"00:02:09","fail":1,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1600659520294;
+window.output["baseMillis"] = 1600753204433;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 62301;
+window.output["generated"] = 129322;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
