--- a/Results/report.html
+++ b/Results/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,129263],[],[[4,0,1,0,[5],[0,235,129021,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,152201],[],[[4,0,1,0,[5],[0,306,151884,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestInaco","*D:\\Github Robot Framework\\RF_SpecialCampaign\\Test\\SmokeTestInaco.robot","*../Test/SmokeTestInaco.robot","*Smoke Test Inaco","*Inaco","*ValueError: dictionary update sequence element #0 has length 1; 2 is required"]);
+window.output["strings"] = window.output["strings"].concat(["*","*SmokeTestSpecialCampaign","*D:\\Github Robot Framework\\RF_SpecialCampaign\\Test\\SmokeTestSpecialCampaign.robot","*../Test/SmokeTestSpecialCampaign.robot","*Smoke Test Hidden","*Hidden","*Element with locator '//div[@id='tukar-poin-text']' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:09","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:02:09","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:02:09","fail":1,"label":"Inaco","pass":0}],[{"elapsed":"00:02:09","fail":1,"id":"s1","label":"SmokeTestInaco","name":"SmokeTestInaco","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:02:32","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:02:32","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:02:32","fail":1,"label":"Hidden","pass":0}],[{"elapsed":"00:02:32","fail":1,"id":"s1","label":"SmokeTestSpecialCampaign","name":"SmokeTestSpecialCampaign","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1600753204433;
+window.output["baseMillis"] = 1600758114191;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 129322;
+window.output["generated"] = 152276;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
